feature/GEINFRA-132-swagger-only: Updated swagger spec and controller
